@@ -21,7 +21,7 @@ if test "$2" = "camlp4r" -o "$2" = "camlp4"; then
         fi
 	shift; shift
 	ARGS2=`echo $* | sed -e "s/[()*]//g"`
-	ARGS1="$ARGS1 -verbose"
+#	ARGS1="$ARGS1 -verbose"
 	echo $COMM $ARGS2 $ARGS1 $FILE 1>&2
 	$COMM $ARGS2 $ARGS1 $FILE
 else
